[package]
name = "dirsect"
version = "0.1.0"
authors = ["Andrzej Grzeslak <agrzeslak0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
regex = "1.5"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }